--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,22 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
+  - title: "Gizem Akgönüllü"
+    url: /gizemakgonullu/
 
-  - title: "Talks"
+  - title: "Katıldığım Etkinlikler"
     url: /talks/    
 
-  - title: "Teaching"
-    url: /teaching/    
+  - #title: "Teaching"
+    #url: /teaching/    
     
-  - title: "Portfolio"
-    url: /portfolio/
+  - title: "Oluşturduklarım"
+    url: /olusturduklarim/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+  - title: "İletişim"
+    url: /iletisim/
     
   - title: "CV"
     url: /cv/
     
-  - title: "Guide"
-    url: /markdown/
+  - #title: "Guide"
+    #url: /markdown/
